loki-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-external
  namespace: logging
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
      nodePort: 30100
