thanos-query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-query
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thanos-query
  template:
    metadata:
      labels:
        app: thanos-query
    spec:
      containers:
        - name: thanos-query
          image: quay.io/thanos/thanos:v0.40.1
          args:
            - query
            - --http-address=0.0.0.0:9090
            - --grpc-address=0.0.0.0:10901
            - --endpoint=kube-prometheus-stack-thanos-discovery.monitoring.svc.cluster.local:10901
            - --endpoint=161.97.180.210:30901
          ports:
            - name: http
              containerPort: 9090
            - name: grpc
              containerPort: 10901
---
apiVersion: v1
kind: Service
metadata:
  name: thanos-query
  namespace: monitoring
spec:
  selector:
    app: thanos-query
  ports:
    - name: http
      port: 9090
      targetPort: 9090
    - name: grpc
      port: 10901
      targetPort: 10901
